Fix work list item grid width
This makes each item 50% width on large screens and 100% width on small
screens. Prior to this fix the grid was showing the items misaligned.

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -265,8 +265,12 @@ iframe {
 
 .wli {
   box-sizing: border-box;
-  max-width: 240px;
   padding-right: $spacing-unit / 4;
+  width: 50%;
+
+  @media (max-width: $breakpoint-sm) {
+    width: 100%;
+  }
 }
 
 // Page Layouts
